--- a/message.html
+++ b/message.html
@@ -18,7 +18,7 @@ Wishing you a day full of love, joy, and happiness!  bye bye!<br>
 </div></div>
 	
 	<div class="tae">
-  <a href="main.html">
+  <a href="index.html">
     <img class="goback" src="bg/back.png" alt="back button">
   </a>
 </div>
